# magic2_inhabit

./: .gitignore  .gitmodules  Makefile  README  Rules.mk  april2  meson.build  submodules.txt
config/: config_to_run  git-diff  git-version  proc-gnd.config  proc-robot-7.config  proc-robot-concat.config  proc-robot-gen.config  robot-3.config  robot-7.config  robot-concat.config  robot-gen.config  robot.config
lcmtypes/: .gitignore  drive_command_t.lcm  goal_request_t.lcm  template_t.lcm  waypoint_cmd_t.lcm
licenses/: README
resc/: bb_floor3.graph  bb_floor3.topo  bbb_floor3.topo
scripts/: helper_push_to_robot.sh  procman_env_2  procman_start_2.sh  push_to_robot.sh  push_to_robots.sh  set_env  start_gnd.sh  start_robot.sh
src/: Rules.mk  meson.build
src/acshi_common/: lcm_handle_async.h  meson.build
src/cobweb/: __main__.py  goals.csv  meson.build  server.py
src/cobweb/site/: index.html  style.css
src/common/: binary_heap.c  binary_heap.h  chebyshev_filter.c  chebyshev_filter.h  circ_buf.c  circ_buf.h  fbinary_heap.c  fbinary_heap.h  filter_test.c  general_search.h  lcm_handle_async.c  median_filter.c  median_filter.h  meson.build  moving_filter.c  moving_filter.h  pid.c  pid.h  pid_ctrl.c  pid_ctrl.h  velo_to_points.c  velo_to_points.h
src/common/general_search/: binary_heap.c  binary_heap.h  general_search.c  general_search.h  heap_compare.c  meson.build  queues.c  queues.h  unordered_set.c  unordered_set.h
src/drive_to_waypoint/: collision.c  collision.h  drive_to_waypoint.c  drive_to_wp_state.h  gui.c  gui.h  meson.build  vfh_star.c  vfh_star.h
src/follow_viewer/: .gitignore  Build.mk  Rules.mk  follow_viewer.c
src/inhabit/: inhabit.c  lcm_handle_async.c  lcm_handle_async.h  meson.build
src/lcmtypes/: Rules.mk  meson.build
src/local_drive/: local_drive.c  meson.build
src/navigate/: astar.c  astar.h  hash_graph.c  hash_graph.h  meson.build  navigate.c  tm_planner.c  tm_planner.h
src/safety_monitor/: meson.build  safety_monitor.c
src/tag_follower/: Build.mk  Rules.mk  meson.build  tag_follower.c
src/template_example/: Build.mk  Rules.mk  main.c
src/velodyne_to_map2/: gridmap2.h  meson.build  velodyne_to_map2.c
subprojects/: april2
